methods.flowerpot.FlowerPot.scala.error
Compilation error:
FlowerPot:21: error: not found: type Colors
def flower(c:Colors){
             ^